k8s/staging/backend/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-staging
  namespace: staging
  labels:
    app: backend
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: farhanraju/biome-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"  
          limits:
            memory: "256Mi"
            cpu: "200m"
