k8s/staging/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: staging
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
